# Silive

./: .gitattributes  .gitignore  AGENTS.md  CODEX_COMMANDS.md  CODEX_CURRENT.md  CODEX_MANIFEST.md  CODEX_PLAN.md  CODEX_SESSION_LOG.md  CODEX_TASKS.md  Makefile  PROJECT_GOAL.md  README.md  package-lock.json  pyproject.toml
.codex/: config.example.toml  config.toml
.github/workflows/: ci.yml
.serena/: project.example.yml  project.yml
docs/: evolutionary_search.md  hypothesis_layer.md  proto_gene_evidence.md  proto_gene_lineage.md  proto_genes.md  proto_genome.md  rdkit.md  rdkit_search.md  reaction_simulator.md  symbolic_graph.md
docs/ai/: ARCHITECTURE.md  AUDIT.md  CODEX_WORKFLOW.md  DECISIONS.md  MCP.md  PROJECT_OVERVIEW.md  PROMPTS.md  RUNBOOK.md  TODO.md
examples/: proto_gene_evidence_corpus.csv  rdkit_candidates.smi
scripts/: bootstrap-codex.sh
src/silive/: __init__.py  chain_report.py  chain_simulation.py  chemistry.py  cli.py  cli_with_evolution.py  cli_with_rdkit.py  cli_with_reactions.py  environment_sweep.py  evolutionary_search.py  model.py  (+15 more)
tests/: test_chain_report.py  test_chain_simulation.py  test_chemistry.py  test_environment_sweep.py  test_evolutionary_search.py  test_hypothesis_layer.py  test_model.py  test_niche_search.py  test_plot.py  test_proto_gene_cli.py  test_proto_gene_evidence.py  test_proto_gene_lineage.py  test_proto_genes.py  test_proto_genome.py  test_rdkit_chemistry.py  test_rdkit_search.py  test_reaction_simulator.py  test_study.py  test_sweep.py  test_symbolic_genome.py  test_symbolic_graph.py  test_symbolic_graph_core.py
