[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "silive"
version = "0.1.0"
description = "Level 1 chemical-logical simulator for silicon-like proto-life"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Silive contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "matplotlib>=3.8",
]
plot = [
  "matplotlib>=3.8",
]
chem = [
  "rdkit-pypi>=2022.9.5",
]

[project.scripts]
silive = "silive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]